[project]
name = "ext-sentinel-py-sdk"
description = "Sentinel Python SDK"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

keywords = [
    "sentinel", "monitor", "detector",
    "web3", "ethereum", "arbitrum", "bsc"
]

dependencies = [
    "rich==13.7.0",
    "httpx==0.26.0",
    "PyYAML==6.0.1",
    "jinja2==3.1.3",
    "aiofiles==23.2.1",
    "async-lru==2.0.4",
    "aiokafka==0.10.0",
    "pydantic==2.6.1",
    "web3==6.15.1",
    "websockets==12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sentinel/version.py"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/sentinel"]

[tool.hatch.build.targets.sdist]
# include = [
#   "pkg/*.py",
#   "/tests",
# ]
# exclude = [
#   "*.json",
#   "pkg/_compat.py",
# ]

[project.scripts]
sentinel = 'sentinel.cli:run_cli_instance'

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=sentinel --cov-report term-missing"
testpaths = ["tests", ]
