[project]
name = "ext-sentinel-py-sdk"
description = "Sentinel Python SDK"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

keywords = [
    "sentinel", "monitor", "detector",
    "web3", "ethereum", "arbitrum", "bsc"
]

dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.11",
    "aiokafka==0.12.0",
    "async-lru==2.0.4",
    "cbor2==5.6.5",
    "croniter==6.0.0",
    "jinja2==3.1.5",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "PyYAML==6.0.2",
    "rich==13.9.4",
    "web3==7.6.1",
    "websockets<14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sentinel/version.py"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/sentinel"]

[tool.hatch.build.targets.sdist]
# include = [
#   "pkg/*.py",
#   "/tests",
# ]
# exclude = [
#   "*.json",
#   "pkg/_compat.py",
# ]

[project.scripts]
sentinel = 'sentinel.cli:execute'

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=sentinel --cov-report term-missing"
testpaths = ["tests", ]
